@startuml Common Enum Classes

package "common.enums.PlantUML file: enum_classes" <<frame>> {
    enum MediaStatus {
        -- description --
        Represents the processing status of a media item, used to track its lifecycle from upload to
        processing, and to handle error states.
        -- values --
        PENDING -- Initial status when media upload has been initiated and a media entity has been
            initialized. This is before the actual uploading to blob storage has begun.
        UPLOADING -- Status after the media entity is initialized and media uploading to blob
            storage has begun but not finished.
        UPLOADED -- Status after the media file has been successfully uploaded to blob storage, but
            before processing has started.
        PROCESSING -- Status when media processing is currently underway.
        PROCESSED -- Status after media processing has completed successfully.
        FAILED -- Status when media processing has failed, either due to an error during upload or
            any step of the processing workflow.
    }

    enum MediaType {
        -- description --
        Represents the type of media item, used to differentiate handling and processing logic for
        different media formats.
        -- values --
        IMAGE -- Represents image media items.
        VIDEO -- Represents video media items.
    }

    enum MLTaggingStatus {
        -- description --
        Represents the status of machine learning-based tagging for a media item, used to track the
        progress and outcome of ML tagging workflows.
        -- values --
        PENDING -- Initial status when ML tagging has not yet started for a processed media item.
        SUCCESS -- Status after ML tagging has completed successfully and tags have been applied to
            the media item (if any found).
        FAILED -- Status when ML tagging has failed, either due to an error during the tagging
            process.
    }

    enum SpeciesTagSource {
        -- description --
        Represents the source of a species tag applied to a media item, used to differentiate
        between user-applied tags and those generated by machine learning models.
        -- values --
        USER -- Represents species tags that were applied by a user.
        ML -- Represents species tags that were generated by the ML tagging service.
    }
        
    enum UnitSystem {
        -- description --
        Represents the unit system preference for a user, used to control how measurements such as
        depth, temperature, and distance are displayed throughout the application.
        -- values --
        IMPERIAL -- Uses imperial units (feet, Fahrenheit, etc.).
        METRIC -- Uses metric units (meters, Celsius, etc.).
    }

    enum DivePeriod {
        -- description --
        Represents the time of day a dive took place, used for categorization and filtering of dive
        logs.
        -- values --
        MORNING -- Dive took place during the morning hours.
        AFTERNOON -- Dive took place during the afternoon hours.
        NIGHT -- Dive took place during nighttime hours.
    }

    enum DiveStartType {
        -- description --
        Represents how a dive was initiated, used to describe the entry method for a dive log.
        -- values --
        BOAT -- Dive was initiated from a boat.
        SHORE -- Dive was initiated from shore.
    }

    enum DiveType {
        -- description --
        Represents the type or style of dive, used for categorization and filtering of dive logs.
        -- values --
        REEF -- A reef dive, typically in shallow to moderate depths along a coral or rocky reef.
        WALL -- A wall dive along a steep underwater cliff or drop-off.
        DRIFT -- A drift dive carried by ocean currents.
        CAVE -- A cave or cavern dive in an overhead environment.
        DEEP -- A deep dive, typically beyond recreational depth limits.
        SHIPWRECK -- A wreck dive exploring a sunken vessel or structure.
        OTHER -- Any other dive type not covered by the above categories.
    }

    enum DivePurpose {
        -- description --
        Represents the purpose or intent of a dive, used for categorization and filtering of dive
        logs.
        -- values --
        RECREATIONAL -- A dive conducted for leisure and enjoyment.
        TRAINING -- A dive conducted as part of training or certification coursework.
        RESEARCH -- A dive conducted for scientific research or data collection.
        RESTORATION -- A dive conducted for reef or marine habitat restoration efforts.
        OTHER -- Any other dive purpose not covered by the above categories.
    }

    enum Weather {
        -- description --
        Represents the weather conditions at the time of a dive, used to record environmental
        context in dive logs.
        -- values --
        SUNNY -- Clear skies with direct sunlight.
        PARTLY_CLOUDY -- A mix of sun and clouds.
        CLOUDY -- Overcast skies with full cloud cover.
        RAINY -- Precipitation occurring during the dive.
        WINDY -- Significant wind conditions.
        FOGGY -- Low visibility due to fog or mist.
    }

    enum WaterType {
        -- description --
        Represents the type of water body where a dive took place, used to record environmental
        context in dive logs.
        -- values --
        SALT -- Saltwater environment (e.g., ocean, sea).
        FRESH -- Freshwater environment (e.g., lake, river, quarry).
        BRACKISH -- A mix of salt and freshwater (e.g., estuaries, mangroves).
    }

    enum BodyOfWater {
        -- description --
        Represents the specific type of water body where a dive took place, used for categorization
        and filtering of dive logs.
        -- values --
        OCEAN -- An ocean or open sea.
        LAKE -- A freshwater lake.
        RIVER -- A freshwater river.
        QUARRY -- A flooded quarry or pit.
        CENOTE -- A natural sinkhole or cenote, typically found in limestone regions.
    }

    enum Condition {
        -- description --
        Represents the intensity level of underwater conditions such as wave, current, and surge,
        used to record environmental context in dive logs.
        -- values --
        NONE -- No noticeable condition.
        LIGHT -- Mild or slight condition.
        MODERATE -- Moderate condition with noticeable effect.
        STRONG -- Strong condition with significant effect on the dive.
    }

    enum ExperienceFeeling {
        -- description --
        Represents the diver's subjective feeling about a dive experience, used as a quick
        qualitative rating in dive logs.
        -- values --
        AMAZING -- An exceptional dive experience.
        GOOD -- A positive dive experience.
        AVERAGE -- A typical, unremarkable dive experience.
        POOR -- A negative or disappointing dive experience.
    }

    enum Visibility {
        -- description --
        Represents the visibility level of various entities (e.g., media items, dive logs) in the
        system, used to control access and sharing settings.
        -- values --
        PUBLIC -- Represents entities that are visible to all users and can be shared publicly.
        PRIVATE -- Represents entities that are only visible to the owner and cannot be shared.
        UNLISTED -- Represents entities that are not publicly listed but can be accessed via direct
            link and shared with others.
    }
}

@enduml
